--- a/flex/03-flex-header-2/style.css
+++ b/flex/03-flex-header-2/style.css
@@ -12,6 +12,9 @@ body {
   background: white;
   border-bottom: 1px solid #ddd;
   box-shadow: 0 0 8px rgba(0,0,0,.1);
+  display:flex;
+  padding:8px;
+  justify-content: center;
 }
 
 .profile-image {
@@ -19,7 +22,7 @@ body {
   box-shadow: inset 2px 2px 4px rgba(0,0,0,.5);
   border-radius: 50%;
   width: 48px;
-  height: 48px;
+  height:  48px;
 }
 
 .logo {
@@ -45,4 +48,23 @@ a {
 
 ul {
   list-style-type: none;
+  display:flex;
+  justify-content: flex-start;
+  padding:8px;
+  gap:8px;
+ 
+}
+
+.left-side{
+  display:flex;
+  align-items: center;
+  
+}
+.right-side{
+  display:flex;
+  flex:1;
+  justify-content: flex-end;
+  align-items: center;
+  padding:8px;
+  gap:8px;
 }
