--- a/flex/04-flex-information/style.css
+++ b/flex/04-flex-information/style.css
@@ -10,6 +10,24 @@ img {
 .title {
   font-size: 36px;
   font-weight: 900;
+  margin-bottom:32px;
+
+}
+
+.content{
+  
+  text-align: center;
+}
+.information-chart{
+  display:flex;
+  flex-direction: row;
+  justify-content: center;
+  gap:52px;
+  
+}
+.info{
+  width: 200px;
+
 }
 
 /* do not edit this footer */
