--- a/flex/06-flex-layout/style.css
+++ b/flex/06-flex-layout/style.css
@@ -5,6 +5,8 @@ body {
   margin: 0;
   overflow: hidden;
   font-family: Roboto, sans-serif;
+  display:flex;
+  flex-direction: column;
 }
 
 img {
@@ -16,6 +18,7 @@ button {
   border: none;
   border-radius: 8px;
   background: #eee;
+  padding:8px;
 }
 
 input {
@@ -24,4 +27,34 @@ input {
   padding: 8px 24px;
   width: 400px;
   margin-bottom: 16px;
+}
+
+.header, .footer {
+  display:flex;
+  padding:10px;
+  justify-content: space-between;
+
+}
+.content{
+  display: flex;
+  flex:1;
+  flex-direction: column;
+  align-items:center;
+  justify-content: center;
+  gap:5px;
+}
+
+.footer {
+  background-color: #eeeeee;
+}
+a {
+  text-decoration: none;
+}
+
+li {
+  list-style: none;
+}
+ul {
+  display:flex;
+  gap:10px;
 }
