--- a/flex/07-flex-layout-2/style.css
+++ b/flex/07-flex-layout-2/style.css
@@ -2,28 +2,70 @@ body {
   font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
   margin: 0;
   min-height: 100vh;
+  display:flex;
+  flex-direction: column;
 }
 
 .header {
   height: 72px;
+  display:flex;
   background: darkmagenta;
   color: white;
+  font-size:32px;
+  font-weight:900;
+  padding:0 16px;
+  align-items: center;
 }
 
 .footer {
+  display:flex;
   height: 72px;
   background: #eee;
   color: darkmagenta;
+  align-items: center;
+  justify-content: center;
+
 }
 
 .sidebar {
   width: 300px;
   background: royalblue;
   box-sizing: border-box;
+  flex:1 0 auto;
+  padding:16px;
 }
+.sidebar ul{
+  padding:0;
+  list-style: none;
+}
+.sidebar li{
+  padding-bottom:10px;
 
+}
+.sidebar a {
+  font-size: 24px;
+  color:white;
+  text-decoration: none;
+}
 .card {
   border: 1px solid #eee;
   box-shadow: 2px 4px 16px rgba(0,0,0,.06);
   border-radius: 4px;
+  flex:0 0 300px;
+  
+
+  
+}
+.main-content{
+  display:flex;
+  flex:1;
+  
+}
+.card-box{
+  display:flex;
+  flex-wrap: wrap;
+  justify-content: flex-start;
+  padding:32px;
+  gap:32px;
+
 }
