--- a/grid/01-grid-layout-1/style.css
+++ b/grid/01-grid-layout-1/style.css
@@ -8,6 +8,9 @@ body, html {
   height: 100%;
   padding: 16px;
   box-sizing: border-box;
+  display:grid;
+  grid-template-columns: 1fr 3fr;
+  grid-template-rows: repeat(2,1fr), 5fr, 1fr,1fr;
 }
 
 .container div {
@@ -17,14 +20,23 @@ body, html {
   font-weight: bold;
   color: white;
   border-radius: 15px;
+
 }
 
 .header {
   background-color: #FFDE22;
+  grid-column-start: 1;
+  grid-column-end: 3;
+  grid-row-start: 1;
+  grid-row-end: 2;
 }
 
 .sidebar {
   background-color: #FF7755;
+  grid-column-start: 1;
+  grid-column-end: 2;
+  grid-row-start: 2;
+  grid-row-end: 5;
 }
 
 .nav {
@@ -33,6 +45,7 @@ body, html {
 
 .article {
   background-color: #bccbde;
+  grid-area: 3 / 2 / 5 / 3; 
 }
 
 .article p {
@@ -44,4 +57,8 @@ body, html {
 
 .footer {
   background-color: #393f4d;
+  grid-column-start: 1;
+  grid-column-end: 3;
+  grid-row-start: 5;
+  grid-row-end: 6;
 }
