--- a/grid/01-grid-layout-1/style.css
+++ b/grid/01-grid-layout-1/style.css
@@ -11,6 +11,7 @@ body, html {
   display:grid;
   grid-template-columns: 1fr 3fr;
   grid-template-rows: repeat(2,1fr), 5fr, 1fr,1fr;
+  gap:15px;
 }
 
 .container div {
