--- a/grid/02-grid-layout-2/style.css
+++ b/grid/02-grid-layout-2/style.css
@@ -8,6 +8,10 @@ body, html {
   height: 100%;
   padding: 16px;
   box-sizing: border-box;
+  display: grid;
+  grid-template-columns: 1fr 3fr;
+  grid-template-rows: 1fr 1fr 5fr 1fr;
+  gap: 15px;
 }
 
 .container div {
@@ -27,6 +31,8 @@ body, html {
 .sidebar {
   background-color: #FF7755;
   grid-row: 2 / 4;
+
+
 }
 
 .nav {
